# FEMcomparison

./: CMakeLists.txt  README.md  create.sql
CompEl/: CMakeLists.txt  LCC_MultiphysicsInterfaceEl.cpp  LCC_MultiphysicsInterfaceEl.h
CreateApproxSpace/: CMakeLists.txt  TPZCreateHybridizedH1Spaces.cpp  TPZCreateHybridizedH1Spaces.h  TPZCreateHybridizedMixedSpaces.cpp  TPZCreateHybridizedMixedSpaces.h  TPZCreateMultiphysicsSpace.cpp
Execute/: Erro.txt  HybridH1  config.txt  experiment.txt  insert.py  ntimes.sh  process.py
Execute/Hybrid_2D-Qua_ESinSin_k-1_n-2/: Hybrid_2D-Qua_ESinSin_k-1_n-2.csv  gmesh_2D-Qua_ref-32 x 32.vtk  gmesh_ref-32 x 32.txt
FEM/: CMakeLists.txt  InputTreatment.cpp  InputTreatment.h  MeshInit.cpp  MeshInit.h  ScriptTools.cpp  ScriptTools.h  Solver.cpp  Solver.h
FEM/Simulations/: CMakeLists.txt  main_Automated.cpp  main_ContributeTest.cpp  main_ErrorMeasurement.cpp  main_HybridH1.cpp  main_HybridH1vsMixed.cpp  main_HybridizedMixed.cpp  main_Mixed.cpp  main_SpeedUp.cpp  main_TimeEfficiency.cpp
FEMcomparison/: CMakeLists.txt
FEMcomparison/FEM/: InputTreatment.cpp  MeshInit.cpp  MeshInit.h  Output.cpp  Output.h  Solver.cpp  Solver.h
FEMcomparison/FEM/Simulations/: main_ContributeTest.cpp  main_HybridH1.cpp  main_HybridH1vsMixed.cpp  main_Mixed.cpp
FEMcomparison/Material/: CMakeLists.txt  LCC_LagrangeMultiplier.cpp  LCC_LagrangeMultiplier.h  LCC_MatLaplacianHybrid.h  LCC_MixedPoisson.cpp  LCC_MixedPoisson.h  LCC_TPZMatLaplacianHybrid.cpp  TPZMatLaplacianHybrid.cpp  TPZMatLaplacianHybrid.h
FEMcomparison/OptimizationProfiles/: FEMcomparison.profdata
FEMcomparison/Tools/: CMakeLists.txt  DataStructure.h  TPZCreateMultiphysicsSpace.cpp  Tools.h
FEMcomparison/cmake/: EnableMKL.cmake  EnableNeoPZ.cmake
Material/: CMakeLists.txt  LCC_LagrangeMultiplier.cpp  LCC_LagrangeMultiplier.h  LCC_MatLaplacianHybrid.cpp  LCC_MatLaplacianHybrid.h  LCC_MixedPoisson.cpp  LCC_MixedPoisson.h  LCC_TPZMatLaplacianHybrid.cpp  LCC_TPZMixedDarcyFlow.cpp  LCC_TPZMixedDarcyFlow.h  TPZMatLaplacianHybrid.cpp  TPZMatLaplacianHybrid.h
Simulations/: CMakeLists.txt
Simulations/UniformPerm/: CMakeLists.txt  main_HybridH1vsMixed.cpp
Tools/: CMakeLists.txt  DataStructure.h  TPZCreateMultiphysicsSpace.cpp  Tools.cpp  Tools.h  computStatist.cpp  computStatist.h
cmake/: EnableMKL.cmake
